--- a/frontend/css/styles.scss
+++ b/frontend/css/styles.scss
@@ -1,14 +1,15 @@
-@import '../css/modules/modals.scss';
 @import '../css/modules/fonts.scss';
 @import '../css/modules/variables.scss';
-@import '../css/modules/landingpage.scss';
+@import '../css/modules/modals.scss';
+@import '../css/modules/swiper.scss';
 @import '../css/modules/nav.scss';
 @import '../css/modules/index.scss';
+@import '../css/modules/landingpage.scss';
 @import '../css/modules/shop.scss';
 @import '../css/modules/account.scss';
 @import '../css/modules/account-settings.scss';
-@import '../css/modules/footer.scss';
 @import '../css/modules/signin.scss';
+@import '../css/modules/footer.scss';
 
 
 * {
