--- a/frontend/css/modules/_landingpage.scss
+++ b/frontend/css/modules/_landingpage.scss
@@ -1,11 +1,11 @@
 .landingpage {
     position: relative;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background-color: $tan;
     @include flex-column;
     align-items: center;
-    justify-content: center;
+    padding-top: 300px;
 
     .star1,
     .star2,
@@ -18,17 +18,17 @@
     }
 
     .star1 {
-        top: 20%;
+        top: 18%;
         left: 40%;
     }
 
     .star2 {
-        top: 70%;
-        left: 4%;
+        top: 64%;
+        left: 8%;
     }
 
     .star3 {
-        top: 80%;
+        top: 70%;
         left: 78%;
     }
 
@@ -39,29 +39,29 @@
 
         h1 {
             font-family: $mirra;
-            font-size: 140px;
+            font-size: 150px;
             color: $red;
         }
 
         p {
-            font-family: $sen;
+            font-family: $jakarta;
             font-weight: 600;
-            font-size: 20px;
-            color: $white;
-            height: 100px;
-            padding: 30px;
-            border-top: 2px $white solid;
+            font-size: 15px;
+            letter-spacing: 2px;
+            color: $blue;
+            padding: 0px 5px 30px 5px;
+            // border-top: 2px $white solid;
             border-bottom: 2px $white solid;
         }
     }
 
     .landingpage_logo {
         position: absolute;
-        bottom: 50px;
+        bottom: 60px;
         text-align: center;
 
         img {
-            width: 80px;
+            width: 50px;
             height: auto;
             object-fit: cover;
         }
@@ -71,8 +71,9 @@
             text-transform: uppercase;
             letter-spacing: 2px;
             font-weight: 600;
-            font-size: 16px;
-            color: $white;
+            font-size: 12px;
+            color: $blue;
+            padding-top: 10px;
         }
     }
 }
@@ -85,7 +86,7 @@
         padding: 20px;
 
         h6 {
-            font-family: $jakarta;
+            font-family: $sen;
             font-size: 25px;
             font-weight: 600;
             margin: 10px 0px;
@@ -195,12 +196,14 @@
                     position: absolute;
                     top: 120px;
                     left: 120px;
+                    z-index: 98;
 
                     img {
                         width: 150px;
                         height: 150px;
                     }
                 }
+
             }
         }
 
@@ -291,7 +294,7 @@
                 background-color: $blue;
                 color: $white;
                 font-size: 15px;
-                font-family: $jakarta;
+                font-family: $sen;
                 font-weight: 500;
                 text-transform: capitalize;
                 letter-spacing: 1px;
