--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -243,273 +243,64 @@ label {
   margin-left: 20px;
 }
 
-.landingpage {
-  position: relative;
-  width: 100vw;
-  height: 100vh;
-  background-color: #DAD5CA;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-.landingpage .star1,
-.landingpage .star2,
-.landingpage .star3 {
-  position: absolute;
-}
-.landingpage .star1 img,
-.landingpage .star2 img,
-.landingpage .star3 img {
-  width: 40px;
-}
-.landingpage .star1 {
-  top: 20%;
-  left: 40%;
-}
-.landingpage .star2 {
-  top: 70%;
-  left: 4%;
-}
-.landingpage .star3 {
-  top: 80%;
-  left: 78%;
-}
-.landingpage .landingpage_title {
+.gallery .swiper {
   width: 100%;
-  height: auto;
+  height: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.gallery .swiper #gallery-swiper .swiper-slide {
   text-align: center;
+  font-size: 18px;
+  background: #fff;
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.landingpage .landingpage_title h1 {
-  font-family: "mirra";
-  font-size: 140px;
-  color: #A7432B;
+.gallery .swiper #gallery-swiper .swiper-slide .product-container {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  grid-row: span 1;
 }
-.landingpage .landingpage_title p {
-  font-family: "Sen", sans-serif;
-  font-weight: 600;
-  font-size: 20px;
-  color: #FDFBFC;
-  height: 100px;
-  padding: 30px;
-  border-top: 2px #FDFBFC solid;
-  border-bottom: 2px #FDFBFC solid;
+.gallery .swiper #gallery-swiper .swiper-slide .product-container .product-item {
+  width: 100%;
+  height: 400px;
+  position: relative;
+  padding-bottom: 0px;
+  background: #FDFBFC;
 }
-.landingpage .landingpage_logo {
-  position: absolute;
-  bottom: 50px;
-  text-align: center;
+.gallery .swiper #gallery-swiper .swiper-slide .product-container .product-item .product-image {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
-.landingpage .landingpage_logo img {
-  width: 80px;
-  height: auto;
+.gallery .swiper #gallery-swiper .swiper-slide .product-container .product-item .product-image img {
+  display: block;
+  width: 100%;
+  height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
-.landingpage .landingpage_logo p {
-  font-family: "Sen", sans-serif;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  font-weight: 600;
-  font-size: 16px;
-  color: #FDFBFC;
+.gallery .swiper .swiper-pagination-bullet {
+  background-color: #1C2536;
 }
-
-.gallery-cont {
-  display: flex;
-  flex-direction: column;
+.gallery .swiper .swiper-pagination-bullet.active {
+  background-color: #1C2536;
 }
-.gallery-cont .gallery {
-  display: flex;
-  flex-direction: column;
-  padding: 20px;
+.gallery .swiper .swiper-button {
+  display: none;
 }
-.gallery-cont .gallery h6 {
-  font-family: "Plus Jakarta Sans", sans-serif;
-  font-size: 25px;
-  font-weight: 600;
-  margin: 10px 0px;
-  text-transform: capitalize;
-  letter-spacing: 1px;
-  line-height: 50px;
-  border-bottom: 2px solid #1C2536;
-}
-.gallery-cont .gallery #gallery0 {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(1, 1fr);
-  gap: 5px;
-}
-.gallery-cont .gallery #gallery0 .product-container {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  grid-row: span 1;
-}
-.gallery-cont .gallery #gallery0 .product-container .product-item {
-  width: 100%;
-  height: 400px;
-  position: relative;
-  padding-bottom: 50px;
-  background: #FDFBFC;
-}
-.gallery-cont .gallery #gallery0 .product-container .product-item .product-image {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-.gallery-cont .gallery #gallery0 .product-container .product-description {
-  height: 50px;
-  width: 100%;
-  display: flex;
-  bottom: 0;
-  align-items: flex-start;
-  justify-content: center;
-  padding: 0 42px 0 6px;
-  position: absolute;
-  flex-direction: column;
-}
-.gallery-cont .gallery #gallery0 .product-container .product-description h4 {
-  font-size: calc(0.8em + 0.3vw);
-  font-weight: 200;
-  color: #1C2536;
-}
-.gallery-cont .gallery #gallery0 .product-container .product-description p {
-  font-size: 0.7em;
-  font-weight: 100;
-  color: #7D876E;
-}
-.gallery-cont .gallery #gallery0 .product-container #favourite {
-  position: absolute;
-  top: 11px;
-  bottom: 11px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  right: 6px;
-  justify-content: center;
-}
-.gallery-cont .gallery #gallery0 .product-container #favourite h3 {
-  font-family: "Plus Jakarta Sans", sans-serif;
-  font-size: 1em;
-  font-weight: 300;
-  color: #1C2536;
-}
-.gallery-cont .gallery #gallery1 {
-  display: flex;
-  flex-direction: column;
-  gap: 50px;
-}
-.gallery-cont .gallery #gallery1 .product-container {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  grid-row: span 1;
-}
-.gallery-cont .gallery #gallery1 .product-container .product-item {
-  width: 100%;
-  height: 400px;
-  position: relative;
-  padding-bottom: 0;
-  background: #FDFBFC;
-}
-.gallery-cont .gallery #gallery1 .product-container .product-item .product-image {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-.gallery-cont .gallery #gallery1 .product-container .product-logo {
+.gallery .swiper .swiper-logo {
   position: absolute;
   top: 120px;
   left: 120px;
+  z-index: 98;
 }
-.gallery-cont .gallery #gallery1 .product-container .product-logo img {
+.gallery .swiper .swiper-logo img {
   width: 150px;
   height: 150px;
-}
-.gallery-cont .gallery #gallery2 {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  gap: 5px;
-}
-.gallery-cont .gallery #gallery2 .product-container {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  grid-row: span 1;
-}
-.gallery-cont .gallery #gallery2 .product-container .product-item {
-  width: 100%;
-  height: 400px;
-  position: relative;
-  padding-bottom: 50px;
-  background: #FDFBFC;
-}
-.gallery-cont .gallery #gallery2 .product-container .product-item .product-image {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-.gallery-cont .gallery #gallery2 .product-container .product-description {
-  height: 50px;
-  width: 100%;
-  display: flex;
-  bottom: 0;
-  align-items: flex-start;
-  justify-content: center;
-  padding: 0 42px 0 6px;
-  position: absolute;
-  flex-direction: column;
-}
-.gallery-cont .gallery #gallery2 .product-container .product-description h4 {
-  font-size: calc(0.8em + 0.3vw);
-  font-weight: 200;
-  color: #1C2536;
-}
-.gallery-cont .gallery #gallery2 .product-container .product-description p {
-  font-size: 0.7em;
-  font-weight: 100;
-  color: #7D876E;
-}
-.gallery-cont .gallery #gallery2 .product-container #favourite {
-  position: absolute;
-  top: 11px;
-  bottom: 11px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  right: 6px;
-  justify-content: center;
-}
-.gallery-cont .gallery #gallery2 .product-container #favourite h3 {
-  font-family: "Plus Jakarta Sans", sans-serif;
-  font-size: 1em;
-  font-weight: 300;
-  color: #1C2536;
-}
-.gallery-cont .gallery #gallery2 .product-container:nth-child(1) {
-  grid-column-start: 1;
-  grid-column-end: 3;
-}
-.gallery-cont .gallery .gallery-button {
-  padding: 10px 0;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: flex-end;
-}
-.gallery-cont .gallery .gallery-button button {
-  border: none;
-  background-color: #1C2536;
-  color: #FDFBFC;
-  font-size: 15px;
-  font-family: "Plus Jakarta Sans", sans-serif;
-  font-weight: 500;
-  text-transform: capitalize;
-  letter-spacing: 1px;
-  padding: 10px 30px;
 }
 
 body {
@@ -794,6 +585,276 @@ nav {
     display: block;
   }
 }
+.landingpage {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  background-color: #DAD5CA;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 300px;
+}
+.landingpage .star1,
+.landingpage .star2,
+.landingpage .star3 {
+  position: absolute;
+}
+.landingpage .star1 img,
+.landingpage .star2 img,
+.landingpage .star3 img {
+  width: 40px;
+}
+.landingpage .star1 {
+  top: 18%;
+  left: 40%;
+}
+.landingpage .star2 {
+  top: 64%;
+  left: 8%;
+}
+.landingpage .star3 {
+  top: 70%;
+  left: 78%;
+}
+.landingpage .landingpage_title {
+  width: 100%;
+  height: auto;
+  text-align: center;
+}
+.landingpage .landingpage_title h1 {
+  font-family: "mirra";
+  font-size: 150px;
+  color: #A7432B;
+}
+.landingpage .landingpage_title p {
+  font-family: "Plus Jakarta Sans", sans-serif;
+  font-weight: 600;
+  font-size: 15px;
+  letter-spacing: 2px;
+  color: #1C2536;
+  padding: 0px 5px 30px 5px;
+  border-bottom: 2px #FDFBFC solid;
+}
+.landingpage .landingpage_logo {
+  position: absolute;
+  bottom: 60px;
+  text-align: center;
+}
+.landingpage .landingpage_logo img {
+  width: 50px;
+  height: auto;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.landingpage .landingpage_logo p {
+  font-family: "Sen", sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-weight: 600;
+  font-size: 12px;
+  color: #1C2536;
+  padding-top: 10px;
+}
+
+.gallery-cont {
+  display: flex;
+  flex-direction: column;
+}
+.gallery-cont .gallery {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+}
+.gallery-cont .gallery h6 {
+  font-family: "Sen", sans-serif;
+  font-size: 25px;
+  font-weight: 600;
+  margin: 10px 0px;
+  text-transform: capitalize;
+  letter-spacing: 1px;
+  line-height: 50px;
+  border-bottom: 2px solid #1C2536;
+}
+.gallery-cont .gallery #gallery0 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(1, 1fr);
+  gap: 5px;
+}
+.gallery-cont .gallery #gallery0 .product-container {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  grid-row: span 1;
+}
+.gallery-cont .gallery #gallery0 .product-container .product-item {
+  width: 100%;
+  height: 400px;
+  position: relative;
+  padding-bottom: 50px;
+  background: #FDFBFC;
+}
+.gallery-cont .gallery #gallery0 .product-container .product-item .product-image {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+.gallery-cont .gallery #gallery0 .product-container .product-description {
+  height: 50px;
+  width: 100%;
+  display: flex;
+  bottom: 0;
+  align-items: flex-start;
+  justify-content: center;
+  padding: 0 42px 0 6px;
+  position: absolute;
+  flex-direction: column;
+}
+.gallery-cont .gallery #gallery0 .product-container .product-description h4 {
+  font-size: calc(0.8em + 0.3vw);
+  font-weight: 200;
+  color: #1C2536;
+}
+.gallery-cont .gallery #gallery0 .product-container .product-description p {
+  font-size: 0.7em;
+  font-weight: 100;
+  color: #7D876E;
+}
+.gallery-cont .gallery #gallery0 .product-container #favourite {
+  position: absolute;
+  top: 11px;
+  bottom: 11px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  right: 6px;
+  justify-content: center;
+}
+.gallery-cont .gallery #gallery0 .product-container #favourite h3 {
+  font-family: "Plus Jakarta Sans", sans-serif;
+  font-size: 1em;
+  font-weight: 300;
+  color: #1C2536;
+}
+.gallery-cont .gallery #gallery1 {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+}
+.gallery-cont .gallery #gallery1 .product-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  grid-row: span 1;
+}
+.gallery-cont .gallery #gallery1 .product-container .product-item {
+  width: 100%;
+  height: 400px;
+  position: relative;
+  padding-bottom: 0;
+  background: #FDFBFC;
+}
+.gallery-cont .gallery #gallery1 .product-container .product-item .product-image {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+.gallery-cont .gallery #gallery1 .product-container .product-logo {
+  position: absolute;
+  top: 120px;
+  left: 120px;
+  z-index: 98;
+}
+.gallery-cont .gallery #gallery1 .product-container .product-logo img {
+  width: 150px;
+  height: 150px;
+}
+.gallery-cont .gallery #gallery2 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  gap: 5px;
+}
+.gallery-cont .gallery #gallery2 .product-container {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  grid-row: span 1;
+}
+.gallery-cont .gallery #gallery2 .product-container .product-item {
+  width: 100%;
+  height: 400px;
+  position: relative;
+  padding-bottom: 50px;
+  background: #FDFBFC;
+}
+.gallery-cont .gallery #gallery2 .product-container .product-item .product-image {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+.gallery-cont .gallery #gallery2 .product-container .product-description {
+  height: 50px;
+  width: 100%;
+  display: flex;
+  bottom: 0;
+  align-items: flex-start;
+  justify-content: center;
+  padding: 0 42px 0 6px;
+  position: absolute;
+  flex-direction: column;
+}
+.gallery-cont .gallery #gallery2 .product-container .product-description h4 {
+  font-size: calc(0.8em + 0.3vw);
+  font-weight: 200;
+  color: #1C2536;
+}
+.gallery-cont .gallery #gallery2 .product-container .product-description p {
+  font-size: 0.7em;
+  font-weight: 100;
+  color: #7D876E;
+}
+.gallery-cont .gallery #gallery2 .product-container #favourite {
+  position: absolute;
+  top: 11px;
+  bottom: 11px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  right: 6px;
+  justify-content: center;
+}
+.gallery-cont .gallery #gallery2 .product-container #favourite h3 {
+  font-family: "Plus Jakarta Sans", sans-serif;
+  font-size: 1em;
+  font-weight: 300;
+  color: #1C2536;
+}
+.gallery-cont .gallery #gallery2 .product-container:nth-child(1) {
+  grid-column-start: 1;
+  grid-column-end: 3;
+}
+.gallery-cont .gallery .gallery-button {
+  padding: 10px 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-end;
+}
+.gallery-cont .gallery .gallery-button button {
+  border: none;
+  background-color: #1C2536;
+  color: #FDFBFC;
+  font-size: 15px;
+  font-family: "Sen", sans-serif;
+  font-weight: 500;
+  text-transform: capitalize;
+  letter-spacing: 1px;
+  padding: 10px 30px;
+}
+
 #result {
   -moz-column-count: 2;
        column-count: 2;
@@ -943,8 +1004,103 @@ nav {
          column-count: 4;
   }
 }
+#tools {
+  background-color: #FDFBFC;
+  width: 100%;
+  height: 100vh;
+}
+
+.login-banner {
+  width: 100%;
+  height: 70px;
+  background-color: #7D876E;
+}
+
+.bi-x {
+  color: white;
+  font-size: 50px;
+  position: absolute;
+  margin-top: 7px;
+  right: 5px;
+}
+
+.sign-in-title,
+.sign-up-title {
+  font-family: "Sen", sans-serif;
+  font-weight: bold;
+  text-align: center;
+  font-size: 50px;
+  padding-bottom: 25px;
+}
+
+.sign-in-title {
+  padding-top: 70px;
+}
+
+.sign-up-title {
+  padding-top: 25px;
+}
+
+.sign-in-subtitle,
+.sign-up-subtitle {
+  font-family: "Plus Jakarta Sans", sans-serif;
+  font-weight: bold;
+  text-align: center;
+  font-size: 20px;
+  margin-bottom: 40px;
+}
+
+u {
+  text-decoration: underline;
+}
+
+#login-form,
+#signup-form {
+  width: 90%;
+  height: 340px;
+  margin: 0 auto;
+  padding-left: 10px;
+  font-family: "Plus Jakarta Sans", sans-serif;
+}
+
+.login-label,
+.signup-label {
+  font-weight: bold;
+  font-size: 23px;
+  margin-bottom: 10px;
+}
+
+.login-input,
+.signup-input {
+  font-family: "Plus Jakarta Sans", sans-serif;
+  all: unset;
+  width: 94%;
+  margin-left: 5px;
+  border-radius: 1px;
+  height: 40px;
+  padding-left: 5px;
+  font-size: 14px;
+  font-weight: 400;
+  border: solid 1px black;
+  margin-bottom: 30px;
+}
+
+#login-button,
+#signup-button {
+  background-color: #1C2536;
+  color: white;
+  font-family: "Plus Jakarta Sans", sans-serif;
+  border-radius: 0px;
+  font-size: 13px;
+  padding: 14px;
+  width: 96%;
+  border: none;
+  margin-left: 5px;
+  margin-top: 40px;
+}
+
 footer {
-  width: 100vw;
+  width: 100%;
   height: auto;
   display: flex;
   flex-direction: column;
@@ -1207,101 +1363,6 @@ footer .footer-bottom .conditions a {
     letter-spacing: 0.5px;
   }
 }
-#tools {
-  background-color: #FDFBFC;
-  width: 100%;
-  height: 100vh;
-}
-
-.login-banner {
-  width: 100%;
-  height: 70px;
-  background-color: #7D876E;
-}
-
-.bi-x {
-  color: white;
-  font-size: 50px;
-  position: absolute;
-  margin-top: 7px;
-  right: 5px;
-}
-
-.sign-in-title,
-.sign-up-title {
-  font-family: "Sen", sans-serif;
-  font-weight: bold;
-  text-align: center;
-  font-size: 50px;
-  padding-bottom: 25px;
-}
-
-.sign-in-title {
-  padding-top: 70px;
-}
-
-.sign-up-title {
-  padding-top: 25px;
-}
-
-.sign-in-subtitle,
-.sign-up-subtitle {
-  font-family: "Plus Jakarta Sans", sans-serif;
-  font-weight: bold;
-  text-align: center;
-  font-size: 20px;
-  margin-bottom: 40px;
-}
-
-u {
-  text-decoration: underline;
-}
-
-#login-form,
-#signup-form {
-  width: 90%;
-  height: 340px;
-  margin: 0 auto;
-  padding-left: 10px;
-  font-family: "Plus Jakarta Sans", sans-serif;
-}
-
-.login-label,
-.signup-label {
-  font-weight: bold;
-  font-size: 23px;
-  margin-bottom: 10px;
-}
-
-.login-input,
-.signup-input {
-  font-family: "Plus Jakarta Sans", sans-serif;
-  all: unset;
-  width: 94%;
-  margin-left: 5px;
-  border-radius: 1px;
-  height: 40px;
-  padding-left: 5px;
-  font-size: 14px;
-  font-weight: 400;
-  border: solid 1px black;
-  margin-bottom: 30px;
-}
-
-#login-button,
-#signup-button {
-  background-color: #1C2536;
-  color: white;
-  font-family: "Plus Jakarta Sans", sans-serif;
-  border-radius: 0px;
-  font-size: 13px;
-  padding: 14px;
-  width: 96%;
-  border: none;
-  margin-left: 5px;
-  margin-top: 40px;
-}
-
 * {
   box-sizing: border-box;
   text-decoration: none;
