added inputs to description modal

--- a/frontend/css/modules/_shop.scss
+++ b/frontend/css/modules/_shop.scss
@@ -154,8 +154,7 @@
 }
 
 .result-padding {
-    padding-left: 5%;
-    padding-right: 5%;
+padding: 5% 5%;
 }
 
 @media only screen and (min-width: 768px) {
