--- a/frontend/css/modules/_modals.scss
+++ b/frontend/css/modules/_modals.scss
@@ -82,24 +82,19 @@ label {
     margin-left: 41px;
 }
 
-.productModal{
-    background-color: white;
-    width: 80%;
-    height: 80%;
+.productModal {
+    background-color: $white;
+    width: 90%;
+    height: 90%;
     position: fixed;
-    top: 10%;
-    left: 10%;
-    // border-top: 3px solid $secondary-colour;
-    // border-right: 3px solid $main-colour;
-    // border-bottom: 3px solid $main-colour;
-    // border-left: 3px solid $secondary-colour;
+    top: 5%;
+    left: 5%;
     border-radius: 10px;
     box-shadow: 5px 5px 200px black;
     visibility: hidden;
     opacity: 0;
-    padding: 0.5em 1.2em 0.7em 1.2em;
     font-size: 1.5em;
-    transition: all .3s ease;
+    transition: all 0.3s ease;
 }
 
 
@@ -132,40 +127,50 @@ label {
 
 .product-modal-grid {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr 2fr;
+  grid-template-rows: 250px .5fr 3fr 1fr;
+  grid-template-columns: 1fr;
   gap: 10px;
   height: 100%;
 }
 
+.product-title {
+    display: flex;
+    flex-direction: column;
+    padding-left: 2%;
+    padding-right: 2%;
+    letter-spacing: .1em;
+    h2 {
+        font-size: 1.2em;
+        font-weight: 300;
+        color: $blue;
+    }
+    h3 {
+        font-size: 0.9em;
+        font-weight: 200;
+        color: $green;
+    }
+}
+
 .product-owner {
-  grid-column: 1/2;
-  grid-row: 1/2;
-  font-size: 20px;
+
 }
 
 .product-name {
-  grid-column: 1/2;
-  grid-row: 2/3;
+        display: flex;
+        justify-content: space-between;
 }
 
-  .product-description{
-    grid-column: 1/2;
-    grid-row: 3/5;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    font-size: .8em;
+  .modal-description{
+
   }
 
 .product-image {
-  grid-column: 2/3;
-  grid-row: 1/5;
-
+//   grid-column: 2/3;
+  grid-row: 1/2;
   img {
     width: 100%;
     height: 100%;
-    object-fit: contain;
+    object-fit: cover;
     background-color: $green;
   }
 }
@@ -180,19 +185,20 @@ label {
 // }
 
 #close-modal {
-  position: absolute;
-  right: 29px;
-  top: 12px;
-  color: $green;
-  font-size: 40px;
-  height: 50px;
-  width: 50px;
-  background: white;
-  border: solid 1px $green;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: all .3s ease;
+    position: absolute;
+    right: 15px;
+    top: 15px;
+    color: #7D876E;
+    font-size: 40px;
+    height: 30px;
+    width: 30px;
+    background: white;
+    border: solid 1px #7D876E;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.3s ease;
+    font-size: 1em;
 }
 
 #close-modal:hover {
@@ -203,8 +209,8 @@ label {
 
 .name-underline {
   width: 100%;
-  height: 15px;
-  background: $green;
+  height: 1px;
+  background: $blue;
 }
 
 // .edit-tools {
@@ -271,4 +277,166 @@ label {
 
 .delete-button {
     margin-left: 20px;
+}
+
+.modal-description{
+    H4{
+        padding: 2% 2%;
+        letter-spacing: .1em;
+        font-weight: 300;
+    }
+    p{
+    padding: 2% 2%;
+    font-size: .8em;
+}
+}
+
+.description-flex{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+}
+
+
+.inquire{
+    display: flex;
+    justify-content: flex-end;
+    padding: 2% 2%;
+    button{
+        font-weight: 300;
+        letter-spacing: .1em;
+        width: 135px;
+    all: unset;
+    color: #FDFBFC;
+    background: #1C2536;
+    padding: 10px 20px 10px 20px;
+    display: flex;
+    }
+}
+
+.comments-style{
+    h4{
+        padding: 2% 2%;
+        letter-spacing: .1em;
+        font-weight: 300;
+    }
+    p{
+        padding: 2% 2%;
+        font-size: .8em; 
+    }
+}
+
+.product-comments {
+    padding: 2%;
+    h3{
+        padding: 0 0 2% 0;
+        font-weight: 300;
+    }
+}
+
+.comment-input{
+    display: flex;
+    justify-content: space-between;
+    input{
+width: 70%;
+    }
+    button{
+        letter-spacing: 0.1em;
+    width: 135px;
+    all: unset;
+    color: #FDFBFC;
+    background: #1C2536;
+    padding: 10px 20px 10px 20px;
+    display: flex;
+    p{
+        font-size: .8em;
+    }
+}
+    }
+
+    .modal-message{
+        display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    padding: 2%;
+    h3{
+        padding-bottom: 2%;
+        font-weight: 300;
+    }
+}
+
+.modal-message-inputs{
+    height: 96%;
+    input{
+        width: 100%;
+        margin-bottom: 2%;
+        font-size: 0.7em;
+    padding: 2%;
+    }
+}
+
+.modal-message-large{
+    height: 60%;
+}
+
+.modal-message-buttons{
+    display: flex;
+    justify-content: space-between;
+    button{
+        font-weight: 300;
+    width: 135px;
+    all: unset;
+    color: #FDFBFC;
+    background: #1C2536;
+    padding: 10px 20px 10px 20px;
+    display: flex;
+    p{
+        font-size: .8em;
+    }
+}
+}
+
+
+
+@media only screen and (min-width: 1024px) {
+
+    .product-modal-grid {
+        
+    grid-template-rows: 1fr 2fr 2fr 2fr;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .product-image{
+        grid-row: 1/4;
+    }
+
+    .product-title {
+        padding-right: 20%;
+        justify-content: center;
+    }
+
+    .modal-description{
+        grid-row: 2/4;
+    }
+
+    .product-comments {
+        grid-row: 4/5;
+        grid-column: 1/3;
+        padding: 2%;
+    }
+
+    .inquire {
+        padding: 2% 2% 0 2%;
+    }
+
+    .modal-message-container{
+        grid-row: 2/4;
+    }
+
+    .padding-comments{
+        padding: 1%;
+    }
+
 }
