--- a/frontend/css/styles.scss
+++ b/frontend/css/styles.scss
@@ -1,14 +1,14 @@
-@import '../css/modules/modals.scss';
 @import '../css/modules/fonts.scss';
 @import '../css/modules/variables.scss';
-@import '../css/modules/landingpage.scss';
+@import '../css/modules/modals.scss';
 @import '../css/modules/nav.scss';
 @import '../css/modules/index.scss';
+@import '../css/modules/landingpage.scss';
 @import '../css/modules/shop.scss';
 @import '../css/modules/account.scss';
 @import '../css/modules/account-settings.scss';
-@import '../css/modules/footer.scss';
 @import '../css/modules/signin.scss';
+@import '../css/modules/footer.scss';
 
 
 * {
@@ -46,6 +46,7 @@ h6 {
 p {
     margin: 0;
     font-family: $jakarta;
+    font-weight: 100;
 }
 
 header {
@@ -234,4 +235,11 @@ header {
     font-size: 20px;
     margin-bottom: 10px;
     color: $blue;
+}
+
+.description-flex{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
 }
